# job_aero_victory

./: CMakeLists.txt  README.md
project_cmd/: CMakeLists.txt  aggregating.cpp  aggregating.hpp
project_cmd_test/: CMakeLists.txt  aggregating_test.cpp  main.cpp  test_settings.gta.runsettings
